v1.1.0/modules/schema/pages/class/GovCT2.adoc
= `GovCT2`
:toclevels: 4


+++General governor with frequency-dependent fuel flow limit.  This model is a modification of the GovCT1<b> </b>model in order to represent the frequency-dependent fuel flow limit of a specific gas turbine manufacturer.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovCT2`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovCT2`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<aset,`aset`>>
//| [[slots_table.aset]]<<aset,`aset`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 10.+++
| _n/a_

| <<db,`db`>>
//| [[slots_table.db]]<<db,`db`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set...+++
| _n/a_

| <<dm,`dm`>>
//| [[slots_table.dm]]<<dm,`dm`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft...+++
| _n/a_

| <<flim1,`flim1`>>
//| [[slots_table.flim1]]<<flim1,`flim1`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 1 (<i>Flim1</i>).  Unit = Hz.  Typical value = 59.+++
| _n/a_

| <<flim10,`flim10`>>
//| [[slots_table.flim10]]<<flim10,`flim10`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 10 (<i>Flim10</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim2,`flim2`>>
//| [[slots_table.flim2]]<<flim2,`flim2`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 2 (<i>Flim2</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim3,`flim3`>>
//| [[slots_table.flim3]]<<flim3,`flim3`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 3 (<i>Flim3</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim4,`flim4`>>
//| [[slots_table.flim4]]<<flim4,`flim4`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 4 (<i>Flim4</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim5,`flim5`>>
//| [[slots_table.flim5]]<<flim5,`flim5`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 5 (<i>Flim5</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim6,`flim6`>>
//| [[slots_table.flim6]]<<flim6,`flim6`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 6 (<i>Flim6</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim7,`flim7`>>
//| [[slots_table.flim7]]<<flim7,`flim7`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 7 (<i>Flim7</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim8,`flim8`>>
//| [[slots_table.flim8]]<<flim8,`flim8`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 8 (<i>Flim8</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<flim9,`flim9`>>
//| [[slots_table.flim9]]<<flim9,`flim9`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Frequency threshold 9 (<i>Flim9</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<ka,`ka`>>
//| [[slots_table.ka]]<<ka,`ka`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++
| _n/a_

| <<kdgov,`kdgov`>>
//| [[slots_table.kdgov]]<<kdgov,`kdgov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++
| _n/a_

| <<kigov,`kigov`>>
//| [[slots_table.kigov]]<<kigov,`kigov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor integral gain (<i>Kigov</i>).  Typical value = 0,45.+++
| _n/a_

| <<kiload,`kiload`>>
//| [[slots_table.kiload]]<<kiload,`kiload`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 1.+++
| _n/a_

| <<kimw,`kimw`>>
//| [[slots_table.kimw]]<<kimw,`kimw`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 seconds.  A value...+++
| _n/a_

| <<kpgov,`kpgov`>>
//| [[slots_table.kpgov]]<<kpgov,`kpgov`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor proportional gain (<i>Kpgov</i>).  Typical value = 4.+++
| _n/a_

| <<kpload,`kpload`>>
//| [[slots_table.kpload]]<<kpload,`kpload`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 1.+++
| _n/a_

| <<kturb,`kturb`>>
//| [[slots_table.kturb]]<<kturb,`kturb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine gain (<i>Kturb</i>).  Typical value = 1,9168.+++
| _n/a_

| <<ldref,`ldref`>>
//| [[slots_table.ldref]]<<ldref,`ldref`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++
| _n/a_

| <<maxerr,`maxerr`>>
//| [[slots_table.maxerr]]<<maxerr,`maxerr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum value for speed error signal (<i>Maxerr</i>) (&gt; GovCT2.minerr).  Typical value = 1.+++
| _n/a_

| <<minerr,`minerr`>>
//| [[slots_table.minerr]]<<minerr,`minerr`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum value for speed error signal (<i>Minerr</i>) (&lt; GovCT2.maxerr).  Typical value = -1.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<plim1,`plim1`>>
//| [[slots_table.plim1]]<<plim1,`plim1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 1 (<i>Plim1</i>).  Typical value = 0,8325.+++
| _n/a_

| <<plim10,`plim10`>>
//| [[slots_table.plim10]]<<plim10,`plim10`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 10 (<i>Plim10</i>).  Typical value = 0.+++
| _n/a_

| <<plim2,`plim2`>>
//| [[slots_table.plim2]]<<plim2,`plim2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 2 (Plim2).  Typical value = 0.+++
| _n/a_

| <<plim3,`plim3`>>
//| [[slots_table.plim3]]<<plim3,`plim3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 3 (<i>Plim3</i>).  Typical value = 0.+++
| _n/a_

| <<plim4,`plim4`>>
//| [[slots_table.plim4]]<<plim4,`plim4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 4 (<i>Plim4</i>).  Typical value = 0.+++
| _n/a_

| <<plim5,`plim5`>>
//| [[slots_table.plim5]]<<plim5,`plim5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 5 (<i>Plim5</i>).  Typical value = 0.+++
| _n/a_

| <<plim6,`plim6`>>
//| [[slots_table.plim6]]<<plim6,`plim6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 6 (<i>Plim6</i>).  Typical value = 0.+++
| _n/a_

| <<plim7,`plim7`>>
//| [[slots_table.plim7]]<<plim7,`plim7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 7 (<i>Plim7</i>).  Typical value = 0.+++
| _n/a_

| <<plim8,`plim8`>>
//| [[slots_table.plim8]]<<plim8,`plim8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power limit 8 (<i>Plim8</i>).  Typical value = 0.+++
| _n/a_

| <<plim9,`plim9`>>
//| [[slots_table.plim9]]<<plim9,`plim9`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Power Limit 9 (<i>Plim9</i>).  Typical value = 0.+++
| _n/a_

| <<prate,`prate`>>
//| [[slots_table.prate]]<<prate,`prate`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Ramp rate for frequency-dependent power limit (<i>Prate</i>).  Typical value = 0,017.+++
| _n/a_

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>).  Typical value = 0,05.+++
| _n/a_

| <<rclose,`rclose`>>
//| [[slots_table.rclose]]<<rclose,`rclose`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -99.+++
| _n/a_

| <<rdown,`rdown`>>
//| [[slots_table.rdown]]<<rdown,`rdown`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++
| _n/a_

| <<ropen,`ropen`>>
//| [[slots_table.ropen]]<<ropen,`ropen`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 99.+++
| _n/a_

| <<rselect,`rselect`>>
//| [[slots_table.rselect]]<<rselect,`rselect`>>
| 0..1 +
xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]
| +++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++
| _n/a_

| <<rup,`rup`>>
//| [[slots_table.rup]]<<rup,`rup`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++
| _n/a_

| <<ta,`ta`>>
//| [[slots_table.ta]]<<ta,`ta`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Acceleration limiter time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<tact,`tact`>>
//| [[slots_table.tact]]<<tact,`tact`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,4.+++
| _n/a_

| <<tb,`tb`>>
//| [[slots_table.tb]]<<tb,`tb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lag time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 0,1.+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tdgov,`tdgov`>>
//| [[slots_table.tdgov]]<<tdgov,`tdgov`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++
| _n/a_

| <<teng,`teng`>>
//| [[slots_table.teng]]<<teng,`teng`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport...+++
| _n/a_

| <<tfload,`tfload`>>
//| [[slots_table.tfload]]<<tfload,`tfload`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Load limiter time constant (<i>Tfload</i>) (&gt;= 0).  Typical value = 3.+++
| _n/a_

| <<tpelec,`tpelec`>>
//| [[slots_table.tpelec]]<<tpelec,`tpelec`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Electrical power transducer time constant (<i>Tpelec</i>) (&gt;= 0).  Typical value = 2,5.+++
| _n/a_

| <<tsa,`tsa`>>
//| [[slots_table.tsa]]<<tsa,`tsa`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<tsb,`tsb`>>
//| [[slots_table.tsb]]<<tsb,`tsb`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 50.+++
| _n/a_

| <<vmax,`vmax`>>
//| [[slots_table.vmax]]<<vmax,`vmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT2.vmin).  Typical value = 1.+++
| _n/a_

| <<vmin,`vmin`>>
//| [[slots_table.vmin]]<<vmin,`vmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT2.vmax).  Typical value = 0,175.+++
| _n/a_

| <<wfnl,`wfnl`>>
//| [[slots_table.wfnl]]<<wfnl,`wfnl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,187.+++
| _n/a_

| <<wfspd,`wfspd`>>
//| [[slots_table.wfspd]]<<wfspd,`wfspd`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to...+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#aset]
=== `aset`
+++Acceleration limiter setpoint (<i>Aset</i>).  Unit = PU / s.  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.aset`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.aset,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#db]
=== `db`
+++Speed governor deadband in PU speed (<i>db</i>).  In the majority of applications, it is recommended that this value be set to zero.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.db`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.db,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dm]
=== `dm`
+++Speed sensitivity coefficient (<i>Dm</i>).  <i>Dm</i> can represent either the variation of the engine power with the shaft speed or the variation of maximum power capability with shaft speed.  If it is positive it describes the falling slope of the engine speed verses power characteristic as speed increases. A slightly falling characteristic is typical for reciprocating engines and some aero-derivative turbines.  If it is negative the engine power is assumed to be unaffected by the shaft speed, but the maximum permissible fuel flow is taken to fall with falling shaft speed. This is characteristic of single-shaft industrial turbines due to exhaust temperature limits.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.dm`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dm,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#flim1]
=== `flim1`
+++Frequency threshold 1 (<i>Flim1</i>).  Unit = Hz.  Typical value = 59.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim1,&#10548;>>
--
////


//[discrete]
[#flim10]
=== `flim10`
+++Frequency threshold 10 (<i>Flim10</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim10`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim10,&#10548;>>
--
////


//[discrete]
[#flim2]
=== `flim2`
+++Frequency threshold 2 (<i>Flim2</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim2`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim2,&#10548;>>
--
////


//[discrete]
[#flim3]
=== `flim3`
+++Frequency threshold 3 (<i>Flim3</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim3`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim3,&#10548;>>
--
////


//[discrete]
[#flim4]
=== `flim4`
+++Frequency threshold 4 (<i>Flim4</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim4`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim4,&#10548;>>
--
////


//[discrete]
[#flim5]
=== `flim5`
+++Frequency threshold 5 (<i>Flim5</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim5`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim5,&#10548;>>
--
////


//[discrete]
[#flim6]
=== `flim6`
+++Frequency threshold 6 (<i>Flim6</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim6`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim6,&#10548;>>
--
////


//[discrete]
[#flim7]
=== `flim7`
+++Frequency threshold 7 (<i>Flim7</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim7`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim7,&#10548;>>
--
////


//[discrete]
[#flim8]
=== `flim8`
+++Frequency threshold 8 (<i>Flim8</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim8`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim8,&#10548;>>
--
////


//[discrete]
[#flim9]
=== `flim9`
+++Frequency threshold 9 (<i>Flim9</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.flim9`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.flim9,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ka]
=== `ka`
+++Acceleration limiter gain (<i>Ka</i>).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ka,&#10548;>>
--
////


//[discrete]
[#kdgov]
=== `kdgov`
+++Governor derivative gain (<i>Kdgov</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kdgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kdgov,&#10548;>>
--
////


//[discrete]
[#kigov]
=== `kigov`
+++Governor integral gain (<i>Kigov</i>).  Typical value = 0,45.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kigov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kigov,&#10548;>>
--
////


//[discrete]
[#kiload]
=== `kiload`
+++Load limiter integral gain for PI controller (<i>Kiload</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kiload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kiload,&#10548;>>
--
////


//[discrete]
[#kimw]
=== `kimw`
+++Power controller (reset) gain (<i>Kimw</i>).  The default value of 0,01 corresponds to a reset time of 100 seconds.  A value of 0,001 corresponds to a relatively slow-acting load controller.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kimw`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kimw,&#10548;>>
--
////


//[discrete]
[#kpgov]
=== `kpgov`
+++Governor proportional gain (<i>Kpgov</i>).  Typical value = 4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kpgov`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpgov,&#10548;>>
--
////


//[discrete]
[#kpload]
=== `kpload`
+++Load limiter proportional gain for PI controller (<i>Kpload</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kpload`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kpload,&#10548;>>
--
////


//[discrete]
[#kturb]
=== `kturb`
+++Turbine gain (<i>Kturb</i>).  Typical value = 1,9168.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.kturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kturb,&#10548;>>
--
////


//[discrete]
[#ldref]
=== `ldref`
+++Load limiter reference value (<i>Ldref</i>).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.ldref`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ldref,&#10548;>>
--
////


//[discrete]
[#maxerr]
=== `maxerr`
+++Maximum value for speed error signal (<i>Maxerr</i>) (&gt; GovCT2.minerr).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.maxerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.maxerr,&#10548;>>
--
////


//[discrete]
[#minerr]
=== `minerr`
+++Minimum value for speed error signal (<i>Minerr</i>) (&lt; GovCT2.maxerr).  Typical value = -1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.minerr`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.minerr,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#plim1]
=== `plim1`
+++Power limit 1 (<i>Plim1</i>).  Typical value = 0,8325.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim1,&#10548;>>
--
////


//[discrete]
[#plim10]
=== `plim10`
+++Power limit 10 (<i>Plim10</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim10`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim10,&#10548;>>
--
////


//[discrete]
[#plim2]
=== `plim2`
+++Power limit 2 (Plim2).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim2,&#10548;>>
--
////


//[discrete]
[#plim3]
=== `plim3`
+++Power limit 3 (<i>Plim3</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim3,&#10548;>>
--
////


//[discrete]
[#plim4]
=== `plim4`
+++Power limit 4 (<i>Plim4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim4,&#10548;>>
--
////


//[discrete]
[#plim5]
=== `plim5`
+++Power limit 5 (<i>Plim5</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim5,&#10548;>>
--
////


//[discrete]
[#plim6]
=== `plim6`
+++Power limit 6 (<i>Plim6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim6,&#10548;>>
--
////


//[discrete]
[#plim7]
=== `plim7`
+++Power limit 7 (<i>Plim7</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim7,&#10548;>>
--
////


//[discrete]
[#plim8]
=== `plim8`
+++Power limit 8 (<i>Plim8</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim8,&#10548;>>
--
////


//[discrete]
[#plim9]
=== `plim9`
+++Power Limit 9 (<i>Plim9</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.plim9`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.plim9,&#10548;>>
--
////


//[discrete]
[#prate]
=== `prate`
+++Ramp rate for frequency-dependent power limit (<i>Prate</i>).  Typical value = 0,017.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.prate`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.prate,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++Permanent droop (<i>R</i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.r`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#rclose]
=== `rclose`
+++Minimum valve closing rate (<i>Rclose</i>).  Unit = PU / s.  Typical value = -99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.rclose`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rclose,&#10548;>>
--
////


//[discrete]
[#rdown]
=== `rdown`
+++Maximum rate of load limit decrease (<i>Rdown</i>).  Typical value = -99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.rdown`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rdown,&#10548;>>
--
////


//[discrete]
[#ropen]
=== `ropen`
+++Maximum valve opening rate (<i>Ropen</i>).  Unit = PU / s.  Typical value = 99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.ropen`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ropen,&#10548;>>
--
////


//[discrete]
[#rselect]
=== `rselect`
+++Feedback signal for droop (<i>Rselect</i>).  Typical value = electricalPower.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.rselect`
| Cardinality
| 0..1
| Type
| xref::enumeration/DroopSignalFeedbackKind.adoc[`DroopSignalFeedbackKind`]


|===

////
[.text-left]
--
<<slots_table.rselect,&#10548;>>
--
////


//[discrete]
[#rup]
=== `rup`
+++Maximum rate of load limit increase (<i>Rup</i>).  Typical value = 99.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.rup`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.rup,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#ta]
=== `ta`
+++Acceleration limiter time constant (<i>Ta</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.ta`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ta,&#10548;>>
--
////


//[discrete]
[#tact]
=== `tact`
+++Actuator time constant (<i>Tact</i>) (&gt;= 0).  Typical value = 0,4.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tact`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tact,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tb]
=== `tb`
+++Turbine lag time constant (<i>Tb</i>) (&gt;= 0).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tb,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Turbine lead time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#tdgov]
=== `tdgov`
+++Governor derivative controller time constant (<i>Tdgov</i>) (&gt;= 0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tdgov`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdgov,&#10548;>>
--
////


//[discrete]
[#teng]
=== `teng`
+++Transport time delay for diesel engine used in representing diesel engines where there is a small but measurable transport delay between a change in fuel flow setting and the development of torque (<i>Teng</i>) (&gt;= 0).  <i>Teng</i> should be zero in all but special cases where this transport delay is of particular concern.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.teng`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.teng,&#10548;>>
--
////


//[discrete]
[#tfload]
=== `tfload`
+++Load limiter time constant (<i>Tfload</i>) (&gt;= 0).  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tfload`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tfload,&#10548;>>
--
////


//[discrete]
[#tpelec]
=== `tpelec`
+++Electrical power transducer time constant (<i>Tpelec</i>) (&gt;= 0).  Typical value = 2,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tpelec`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpelec,&#10548;>>
--
////


//[discrete]
[#tsa]
=== `tsa`
+++Temperature detection lead time constant (<i>Tsa</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tsa`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tsa,&#10548;>>
--
////


//[discrete]
[#tsb]
=== `tsb`
+++Temperature detection lag time constant (<i>Tsb</i>) (&gt;= 0).  Typical value = 50.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.tsb`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tsb,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#vmax]
=== `vmax`
+++Maximum valve position limit (<i>Vmax</i>) (&gt; GovCT2.vmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.vmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmax,&#10548;>>
--
////


//[discrete]
[#vmin]
=== `vmin`
+++Minimum valve position limit (<i>Vmin</i>) (&lt; GovCT2.vmax).  Typical value = 0,175.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.vmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmin,&#10548;>>
--
////


//[discrete]
[#wfnl]
=== `wfnl`
+++No load fuel flow (<i>Wfnl</i>).  Typical value = 0,187.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.wfnl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.wfnl,&#10548;>>
--
////


//[discrete]
[#wfspd]
=== `wfspd`
+++Switch for fuel source characteristic to recognize that fuel flow, for a given fuel valve stroke, can be proportional to engine speed (<i>Wfspd</i>).
true = fuel flow proportional to speed (for some gas turbines and diesel engines with positive displacement fuel injectors)
false = fuel control system keeps fuel flow independent of engine speed.
Typical value = false.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovCT2.wfspd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.wfspd,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
